--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<script>
+    console.log('Hello world')
+</script>
 <body>
 <h1>Hello World</h1>
 <button>Donate</button>
