add css responsive

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>This page</title>
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <script>
     console.log('Hello world')
 </script>
 <body>
 <h1>Hello World</h1>
-<button>Donate</button>
+<div class="btndiv">
+    <button>Donate</button>
+</div>
 </body>
 </html>
